--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .blog-time {
-  color: rgb(137, 126, 109);
+  color: rgb(171, 162, 149);
 }
 
 #personal-li {
@@ -35,7 +35,7 @@ body {
 
 body {
   position: relative;
-  background-color: white;
+  background-color: rgb(249, 247, 242);
   font-family: "Karla", sans-serif;
   font-size: 1rem;
   background-attachment: fixed;
@@ -49,7 +49,7 @@ header {
   top: 0;
   width: 100vw;
   height: 5em;
-  background-color: white;
+  background-color: rgb(249, 247, 242);
   backdrop-filter: blur(0.2em);
   box-shadow: 0 0 0.2em gray;
 }
@@ -61,7 +61,7 @@ header h1 {
   padding-right: 0.6em;
   font-family: "Rammetto One", cursive;
   font-size: 2.3em;
-  color: rgba(49, 49, 49, 0.867);
+  color: rgb(54, 0, 217);
   transition: 0.3s;
   mix-blend-mode: multiply;
   line-height: 95%;
@@ -74,7 +74,7 @@ header #head-circle {
   left: 1rem;
   height: 7em;
   width: 7em;
-  background-color: rgb(54, 0, 217);
+  background-color: rgb(171, 162, 149);
   border-radius: 50%;
 }
 
@@ -102,8 +102,8 @@ header #head-circle {
   height: 100vh;
   padding-right: 5em;
   max-width: 400px;
-  background-color: white;
-  box-shadow: 0em 0em 1em 5em white;
+  background-color: rgb(249, 247, 242);
+  box-shadow: 0em 0em 1em 5em rgb(249, 247, 242);
 }
 #nav-cont-mob #nav-links-mob li {
   list-style: none;
@@ -201,15 +201,6 @@ p {
   left: 2em;
 }
 
-.mob-page-sub {
-  display: block;
-  position: absolute;
-  top: 4.1em;
-  right: 1em;
-  font-family: "Monaco", monospace;
-  color: rgb(137, 126, 109);
-}
-
 .desk-page-sub {
   display: none;
 }
@@ -233,7 +224,7 @@ p {
 #about-buttons .button-cont .button {
   padding: 0.5em;
   font-size: 1em;
-  color: white;
+  color: rgb(249, 247, 242);
   background-color: rgb(41, 0, 163);
   border-radius: 0.4em 0.4em 0.4em 0.4em;
   border: none;
@@ -266,13 +257,13 @@ p {
 .download-button a:visited {
   padding: 0.5em;
   font-size: 1em;
-  color: white;
+  color: rgb(249, 247, 242);
   background-color: rgb(41, 0, 163);
   border-radius: 0.4em 0.4em 0.4em 0.4em;
   border: none;
   position: relative;
   text-decoration: none;
-  color: white;
+  color: rgb(249, 247, 242);
 }
 
 #resume-iframe {
@@ -283,16 +274,23 @@ p {
 }
 
 footer {
-  z-index: 5;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: fixed;
-  bottom: 0em;
-  text-align: center;
-  background-color: white;
   width: 100vw;
+  bottom: 0em;
+  background-color: rgb(249, 247, 242);
   box-shadow: 0 0 0.2em gray;
 }
+footer p {
+  margin-left: 3em;
+  font-size: 1rem;
+  color: rgba(49, 49, 49, 0.867);
+}
 footer form {
-  background-color: white;
+  background-color: rgb(249, 247, 242);
   width: 3em;
   height: 3em;
   bottom: 0em;
@@ -300,7 +298,7 @@ footer form {
 footer #contact-button {
   padding: 0.5em;
   font-size: 1em;
-  color: white;
+  color: rgb(249, 247, 242);
   background-color: rgb(41, 0, 163);
   border-radius: 0.4em 0.4em 0.4em 0.4em;
   border: none;
@@ -370,10 +368,6 @@ footer #contact-button {
     justify-content: center;
   }
 
-  .mob-page-sub {
-    display: none;
-  }
-
   .desk-page-sub {
     display: block;
     position: absolute;
@@ -381,7 +375,7 @@ footer #contact-button {
     left: 0em;
     font-family: "Monaco", monospace;
     font-size: 1.2em;
-    color: rgb(107, 92, 73);
+    color: rgb(171, 162, 149);
     writing-mode: vertical-lr;
   }
 
@@ -486,6 +480,7 @@ footer #contact-button {
 #expand-check-3:hover ~ #journal-card-3,
 #expand-check-4:hover ~ #journal-card-4,
 #expand-check-5:hover ~ #journal-card-5 {
+    background-color: white;
     transform: scale(1.015);
   }
 
@@ -579,7 +574,7 @@ footer #contact-button {
     font-size: 2em;
     left: 0.1em;
     top: 0.3em;
-    -webkit-text-stroke: 8px white;
+    -webkit-text-stroke: 8px rgb(249, 247, 242);
     transform: scale(1.2, 1);
   }
 
@@ -597,7 +592,7 @@ footer #contact-button {
     display: block;
     position: absolute;
     left: -30vw;
-    background-color: white;
+    background-color: rgb(249, 247, 242);
     height: 50em;
     width: 30vw;
     transition: 0.3s;
@@ -629,7 +624,7 @@ footer #contact-button {
   .nav-list a:hover::before,
 #nav-list-desk a:hover::before {
     content: "cd ./";
-    color: gray;
+    color: rgb(168, 168, 168);
   }
   .nav-list #portrait,
 #nav-list-desk #portrait {
@@ -677,6 +672,7 @@ footer #contact-button {
   }
 
   #about-img-cont:hover {
+    background-color: rgb(249, 247, 242);
     box-shadow: none;
   }
 
@@ -705,7 +701,7 @@ footer #contact-button {
   #about-buttons .button-cont .button {
     padding: 0.5em;
     font-size: 1em;
-    color: white;
+    color: rgb(249, 247, 242);
     background-color: rgb(41, 0, 163);
     border-radius: 0.4em 0.4em 0.4em 0.4em;
     border: none;
@@ -767,13 +763,13 @@ footer #contact-button {
 .download-button a:visited {
     padding: 0.5em;
     font-size: 1em;
-    color: white;
+    color: rgb(249, 247, 242);
     background-color: rgb(41, 0, 163);
     border-radius: 0.4em 0.4em 0.4em 0.4em;
     border: none;
     transition: 0.1s;
     text-decoration: none;
-    color: white;
+    color: rgb(249, 247, 242);
   }
   .download-button a:hover,
 .download-button a:visited:hover {
@@ -789,7 +785,7 @@ footer #contact-button {
   #contact-button {
     padding: 0.5em;
     font-size: 1em;
-    color: white;
+    color: rgb(249, 247, 242);
     background-color: rgb(41, 0, 163);
     border-radius: 0.4em 0.4em 0.4em 0.4em;
     border: none;
