Fixed desktop home top margin

--- a/style.css
+++ b/style.css
@@ -407,6 +407,10 @@ footer #contact-button {
     justify-content: center;
   }
 
+  .page {
+    margin-top: 10em;
+  }
+
   .desk-page-sub {
     display: block;
     position: absolute;
