--- a/style.scss
+++ b/style.scss
@@ -513,6 +513,9 @@ footer {
     flex-wrap: wrap;
     justify-content: center;
   }
+  .page {
+    margin-top: 10em;
+  }
   .desk-page-sub {
     display: block;
     position: absolute;
